--- a/Locate-Victims.html
+++ b/Locate-Victims.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookie Grabber</title>
+  <title>Locate Victims</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="app.js" defer></script>
   <link rel="icon" href="astroICON.png" sizes="64x64">
