--- a/Cookie-Grabber.html
+++ b/Cookie-Grabber.html
@@ -112,6 +112,7 @@
       <li>Logs IP Adress</li>
       <li>Logs Email Adress</li>
       <li>And more!</li>
+      <li>Status: Not Working</li>
         <a href="https://www.roblox.com/game-pass/959096026/Product-400" class="buy-button">
           Buy Now! 
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
