--- a/VIP-Hitter-Package.html
+++ b/VIP-Hitter-Package.html
@@ -99,8 +99,10 @@
   <main>
     <div class="container">
       <h2>VIP Beaming Hitter Package</h2>
-      <p>This is a full selfmade VIP Beaming Package, every single text file is wrote by myself and the zip file is filled with tons of other files and even some more zip files and so on.. there are so many methods you wont even be able to try them all!</p>
-        <p class="avergeSizeText">Features</p>
+      
+    <p>This is a full selfmade VIP Beaming Package, every single text file is wrote by myself and the zip file is filled with tons of other files and even some more zip files and so on.. there are so many methods you wont even be able to try them all!</p>
+       <h2>DM me on discord after purchse! (user is dupitdown)</h2>
+      <p class="avergeSizeText">Features</p>
             <li>.ZIP</li>
             <li>200+ Beaming Methods</li>
             <li>5+ Cookie Loggers from famous devs</li>
