--- a/Password-Guesser.html
+++ b/Password-Guesser.html
@@ -100,6 +100,7 @@
     <div class="container">
       <h2>Password Guesser</h2>
       <p>This is a selfmade Password Guesser by me and a friend</p>
+             <h2>DM me on discord after purchse! (user is dupitdown)</h2>
         <p class="avergeSizeText">Features</p>
             <li>Logs every Password</li>
             <li>Works on almost any website</li>
