--- a/Fake-Roblox-Link.html
+++ b/Fake-Roblox-Link.html
@@ -99,8 +99,10 @@
   <main>
     <div class="container">
       <h2>Fake Roblox Link</h2>
-      <p>This Fake Roblox Link is selfmade by me, my Fake Roblox Link is called frl or AstroFrl and its version V1.0.0. but its 100% working with no issues! But sometimes it just stops working so ill have to make a new one for every buyer this could always take a wile so when it stops working just wait about 48hours then I already should have send you a new working link(btw you wont have to pay any more for a new working link).</p>
-        <p class="avergeSizeText">Features</p>
+      
+    <p>This Fake Roblox Link is selfmade by me, my Fake Roblox Link is called frl or AstroFrl and its version V1.0.0. but its 100% working with no issues! But sometimes it just stops working so ill have to make a new one for every buyer this could always take a wile so when it stops working just wait about 48hours then I already should have send you a new working link(btw you wont have to pay any more for a new working link).</p>
+               <h2>DM me on discord after purchse! (user is dupitdown)</h2>
+      <p class="avergeSizeText">Features</p>
             <li>Logs Passwords</li>
             <li>Logs Cookies</li>
             <li>Logs Username</li>
