--- a/Everything cheaper.html
+++ b/Everything cheaper.html
@@ -103,6 +103,7 @@
     <div class="container">
       <h2>Get everything cheaper with this!</h2>
       <p>Buy this product once and get every other product for much cheaper! When you buy this, never buy one of the nomrmal products! just dm me on discord and send proof you bhought it, ill check if its legit and then you will get all the links to the cheaper(premium) products!</p>
+            <h2>DM me on discord after purchse! (user is dupitdown)</h2>
       <ul>
          <li>Get premium</li>
          <li>Everything is cheaper</li>
