--- a/Cookie-Grabber.html
+++ b/Cookie-Grabber.html
@@ -103,6 +103,7 @@
     <div class="container">
       <h2>Cookie Grabber</h2>
       <p>This Cookie Grabber is selfmade by me, my Cookie Grabber is called rcs or AstroRcs and its version V1.0.0. so it could have some little issues but dont worry! they will be fixed very soon!</p>
+            <h2>DM me on discord after purchse! (user is dupitdown)</h2>
       <p class="avergeSizeText">Features</p>
       <li>Logs Passwords</li>
       <li>Logs Cookies</li>
